# ai-home-renovation

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AI Home Renovation Platform MVP PRD.docx  CLAUDE.md  Makefile  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_payments_stripe_checkout.py  0003_users_password_set.py  68067a5c1d6b_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/domain/contractors/: models.py  repository.py  router.py  schemas.py  scoring.py  service.py
backend/app/domain/payments/: models.py  repository.py  router.py  schemas.py  service.py  stripe_client.py
backend/app/domain/projects/: cost_engine.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/middleware/: cors.py
backend/app/schemas/: response.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: contractor_sync.py  notifications.py
caddy/: Caddyfile.dev  Caddyfile.prod
design-system/ai-home-renovation/: MASTER.md
docs/plans/: 2026-03-25-project-scaffold-design.md
docs/superpowers/specs/: 2026-04-22-stripe-integration-design.md
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  payments.ts  projects.ts
frontend/src/pages/: Home.tsx  (+8 more)
(+9 files in other folders)
